[gd_scene load_steps=5 format=3 uid="uid://dg67h66qxqjac"]

[ext_resource type="Script" uid="uid://ckq7r0ebgmday" path="res://src/ui/tag_template.gd" id="1_ilo0y"]
[ext_resource type="Theme" uid="uid://bgywavmcea6l6" path="res://assets/styles/tag_theme.tres" id="2_0tmfw"]
[ext_resource type="Script" uid="uid://cs4y4k62wcpwq" path="res://src/ui/tag_panel.gd" id="3_yy15v"]
[ext_resource type="Script" uid="uid://bf4p1jv5ruxss" path="res://src/ui/explain_label.gd" id="4_yy15v"]

[node name="TagTemplate" type="Control"]
layout_mode = 3
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
grow_horizontal = 2
size_flags_horizontal = 4
size_flags_vertical = 4
script = ExtResource("1_ilo0y")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -33.5
offset_right = 33.5
offset_bottom = 33.0
grow_horizontal = 2
theme = ExtResource("2_0tmfw")
script = ExtResource("3_yy15v")

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 5

[node name="DisplayName" type="Label" parent="PanelContainer/MarginContainer"]
layout_mode = 2
text = "TAG_BUILDINGS"
horizontal_alignment = 1
vertical_alignment = 1
script = ExtResource("4_yy15v")
metadata/_custom_type_script = "uid://bf4p1jv5ruxss"

[connection signal="color_changed" from="." to="PanelContainer" method="set_color"]
[connection signal="explanation_changed" from="." to="PanelContainer/MarginContainer/DisplayName" method="set_tooltip_key"]
[connection signal="text_changed" from="." to="PanelContainer/MarginContainer/DisplayName" method="set_text"]
